--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -30,6 +30,7 @@
                  "name": "Python: Current File (Integrated Terminal)",
                  "type": "python",
                  "request": "launch",
+                 "cwd":"${fileDirname}",
                  "program": "${file}",
                  "console": "integratedTerminal",
             }
